[gd_scene load_steps=6 format=3 uid="uid://dnyiy3gf382vl"]

[ext_resource type="Texture2D" uid="uid://18h5k0eo1iws" path="res://data/sprites/bg/1.png" id="1_icqfr"]
[ext_resource type="Script" path="res://game/game.gd" id="1_xd66c"]
[ext_resource type="PackedScene" uid="uid://dv56dvw112te8" path="res://game/objects/card.tscn" id="2_4146v"]
[ext_resource type="Script" path="res://game/players_list.gd" id="5_dg6by"]
[ext_resource type="Theme" uid="uid://b1ktcbwssx6qr" path="res://data/them/game.tres" id="8_f5r2f"]

[node name="Game2d" type="Node2D"]
script = ExtResource("1_xd66c")
metadata/_edit_vertical_guides_ = [192.0, 512.0, 832.0, 1152.0, 1472.0]
metadata/_edit_horizontal_guides_ = [1088.0, 1088.0, 1088.0, 1088.0, 1088.0]

[node name="BG" type="Sprite2D" parent="."]
scale = Vector2(2.5, 2.10938)
texture = ExtResource("1_icqfr")
centered = false

[node name="Card1" parent="." instance=ExtResource("2_4146v")]
position = Vector2(192, 1088)

[node name="Card2" parent="." instance=ExtResource("2_4146v")]
position = Vector2(512, 1088)

[node name="Card3" parent="." instance=ExtResource("2_4146v")]
position = Vector2(832, 1088)

[node name="Card4" parent="." instance=ExtResource("2_4146v")]
position = Vector2(1152, 1088)

[node name="Card5" parent="." instance=ExtResource("2_4146v")]
position = Vector2(1472, 1088)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Exit" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 0.0416667
anchor_bottom = 0.037037
offset_left = 48.0
offset_top = 16.0
offset_right = 208.0
offset_bottom = 48.0
rotation = 2.93141e-05
theme = ExtResource("8_f5r2f")
theme_type_variation = &"ExitButton"
text = "Выход"
metadata/_edit_use_anchors_ = true

[node name="Players" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 1744.0
offset_top = 24.0
offset_right = 2224.0
offset_bottom = 896.0
script = ExtResource("5_dg6by")

[node name="Label" type="Label" parent="CanvasLayer/Players"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_right = 160.0
offset_bottom = 56.0
grow_horizontal = 2
theme = ExtResource("8_f5r2f")
theme_type_variation = &"HeaderMedium"
text = "Игроки"
vertical_alignment = 1

[node name="PlayerContainer" type="VBoxContainer" parent="CanvasLayer/Players"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.083
anchor_right = 0.5
anchor_bottom = 0.083
offset_left = -160.0
offset_top = -0.376007
offset_right = 160.0
offset_bottom = 760.624

[connection signal="card_is_pressed" from="Card1" to="." method="_on_card_card_is_pressed" binds= [0]]
[connection signal="card_is_pressed" from="Card2" to="." method="_on_card_card_is_pressed" binds= [1]]
[connection signal="card_is_pressed" from="Card3" to="." method="_on_card_card_is_pressed" binds= [2]]
[connection signal="card_is_pressed" from="Card4" to="." method="_on_card_card_is_pressed" binds= [3]]
[connection signal="card_is_pressed" from="Card5" to="." method="_on_card_card_is_pressed" binds= [4]]
[connection signal="pressed" from="CanvasLayer/Exit" to="." method="_on_exit_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Players" to="CanvasLayer/Players" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Players" to="CanvasLayer/Players" method="_on_mouse_exited"]
